2025-12-16T12:35:33Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20268112732 # 1369
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-16
* notice: last 14d: unq all: 60 105
* notice: prev accum: outdated-unq outdated-all / unq all: 5117 10121 / 5177 10222
* notice: next accum: outdated-unq outdated-all / unq all: 5117 10121 / 5183 10229
* notice: prev exec diff / last date diff / accum: unq all: +6 +7 -0 -0 / +6 +7 -0 -0 / 6 7
* notice: removed / changed dates: [] / [2025-12-16]

2025-12-16T01:17:07Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20253134210 # 1368
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-16
* notice: last 14d: unq all: 55 98
* notice: prev accum: outdated-unq outdated-all / unq all: 5115 10117 / 5176 10221
* notice: next accum: outdated-unq outdated-all / unq all: 5117 10121 / 5177 10222
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -2 -3 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [2025-12-01] / [2025-12-02 2025-12-15]

2025-12-15T12:36:56Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20232415737 # 1367
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-15
* notice: last 14d: unq all: 58 104
* notice: prev accum: outdated-unq outdated-all / unq all: 5115 10117 / 5175 10220
* notice: next accum: outdated-unq outdated-all / unq all: 5115 10117 / 5176 10221
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-12-15]

2025-12-15T01:18:28Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20217417014 # 1366