@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-12-16T12:35:33Z",
-  "count_outdated" : 10121,
-  "uniques_outdated" : 5117,
+  "timestamp" : "2025-12-17T01:11:40Z",
+  "count_outdated" : 10125,
+  "uniques_outdated" : 5120,
   "count" : 10229,
   "uniques" : 5183,
   "clones" : [
-    {
-      "timestamp": "2025-12-02T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 4 ],
-      "count_decinc": [ 3, 4 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 3 ],
-      "uniques_decinc": [ 2, 3 ]
-    },
     {
       "timestamp": "2025-12-03T00:00:00Z",
       "count": 37,
