@@ -1,12 +1,7 @@
 {
-  "count": 105,
-  "uniques": 60,
+  "count": 104,
+  "uniques": 59,
   "clones": [
-    {
-      "timestamp": "2025-12-02T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-12-03T00:00:00Z",
       "count": 37,
