@@ -1,3 +1,12 @@
+2025-12-17T01:11:40Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20288172108 # 1370
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-17
+* notice: last 14d: unq all: 59 104
+* notice: prev accum: outdated-unq outdated-all / unq all: 5117 10121 / 5183 10229
+* notice: next accum: outdated-unq outdated-all / unq all: 5120 10125 / 5183 10229
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-12-02] / []
+
 2025-12-16T12:35:33Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20268112732 # 1369
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-16
